--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist",
     "prestart": "npm run -s build",
     "test": "eslint src",
-    "migrate": "node src/db/migrate.js"
+    "migrate": "node src/db/migrate.js",
+    "seed": "node src/db/seed.js"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
