--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node dist",
     "prestart": "npm run -s build",
     "test": "eslint src",
-    "migrate": "node src/db/migrate.js",
-    "seed": "node src/db/seed.js"
+    "migrate": "npm run -s build && node src/db/migrate.js",
+    "seed": "npm run -s build && node src/db/seed.js"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -37,9 +37,9 @@
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "pg": "^6.1.0",
     "resource-router-middleware": "^0.5.1",
-    "sequelize": "^3.24.3",
-    "sqlite3": "^3.1.4"
+    "sequelize": "^3.24.3"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
@@ -47,7 +47,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.1.1",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "sqlite3": "^3.1.4"
   },
   "bugs": {
     "url": "https://github.com/developit/express-es6-rest-api/issues"
