--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prestart": "npm run -s build",
     "test": "eslint src",
     "migrate": "npm run -s build && node src/db/migrate.js",
-    "seed": "npm run -s build && node src/db/seed.js"
+    "seed-dev": "npm run -s build && node src/db/seed.js",
+    "seed": "node dist/db/seed.js"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
