--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
+    "build": "babel src -s -D -d dist --presets es2015,stage-0 && node dist/db/migrate.js && node dist/db/seed.js",
     "start": "node dist",
     "prestart": "npm run -s build",
     "test": "eslint src",
@@ -26,11 +26,7 @@
       "no-unused-vars": 1
     }
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/developit/express-es6-rest-api.git"
-  },
-  "author": "Jason Miller <jason@developit.ca>",
+  "author": "Corbin Page",
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.9.0",
